# nodeble

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: broker.yaml.example  notify.yaml.example  risk.yaml.example  signals.yaml.example  strategy-aggressive.yaml.example  strategy-moderate.yaml.example  strategy.yaml.example
deploy/: deploy.sh  nodeble.service  update.sh
docs/: emergency-runbook.md  ic-improvement-research.md  tiger-trading-adaptive-integration-prompt.md
docs/superpowers/plans/: 2026-03-19-plan-improvements.md  2026-03-20-nodeble-extraction.md  2026-03-21-adaptive-strategy.md  2026-03-21-ic-backtest-engine.md  2026-03-21-vix-term-structure-and-dynamic-targets.md
plan/: 00 - Home.md  01 - Existing Systems Audit.md  02 - Cross-Platform Comparison.md  03 - Core IP & Reusable Components.md  04 - Product Vision.md  05 - Architecture Draft.md  06 - MVP Definition.md  07 - Technology Stack.md  08 - Target Market.md  09 - Business Model.md  10 - Competitive Landscape.md  11 - Regulatory Considerations.md  12 - Roadmap.md  13 - Team & Hiring.md  14 - Funding Strategy.md  15 - Implementation Sessions.md  16 - Session Plan for Audit.md
src/nodeble/: __main__.py  paths.py
src/nodeble/backtest/: data.py  (+5 more)
tests/: mock_broker.py  test_adaptive.py  test_dry_run_safety.py  test_dynamic_targets.py  test_executor.py  test_factory.py  test_integration.py  test_main.py  test_manager.py  test_mock_broker.py  test_pricing.py  test_risk.py  test_scorer.py  test_signal_job.py  test_simulator.py  test_spread_guards.py  test_state.py  test_strike_selector.py
(+34 files in other folders)
